--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -1,12 +1,33 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>Privacy Policy</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Privacy Policy | Christian Tyler Properties LLC</title>
 </head>
 <body>
-  <h1>Privacy Policy</h1>
-  <p>This Privacy Policy explains how we collect, use, and protect your information when you use our WhatsApp marketing services. We do not collect personal information except for what is necessary to deliver WhatsApp messages.</p>
-  <p>For any questions, contact: [your email address]</p>
+    <h1>Privacy Policy</h1>
+
+    <p>Christian Tyler Properties LLC ("we", "our", or "us") is committed to protecting your privacy. This Privacy Policy explains how we collect, use, and protect information provided by users interacting with our WhatsApp marketing communications and updates.</p>
+
+    <h2>Information We Collect</h2>
+    <p>We do not actively collect personal information from users through WhatsApp interactions, other than the information you voluntarily provide such as your phone number and your message responses.</p>
+
+    <h2>How We Use Information</h2>
+    <ul>
+        <li>To send marketing updates and communications about our real estate projects.</li>
+        <li>To respond to inquiries or requests you make via WhatsApp.</li>
+    </ul>
+
+    <h2>Data Sharing</h2>
+    <p>We do not sell, trade, or share your information with third parties, except as necessary to send WhatsApp communications or as required by law.</p>
+
+    <h2>Data Security</h2>
+    <p>We take reasonable measures to protect any information shared with us through WhatsApp from unauthorized access or disclosure.</p>
+
+    <h2>Contact Us</h2>
+    <p>If you have any questions about this Privacy Policy, you can contact us at <strong>info@ctp-fl.com</strong>.</p>
+
+    <p>Effective Date: April 28, 2025</p>
 </body>
 </html>
