--- a/terms-of-service.html
+++ b/terms-of-service.html
@@ -1,12 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>Terms of Service</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Terms of Service | Christian Tyler Properties LLC</title>
 </head>
 <body>
-  <h1>Terms of Service</h1>
-  <p>By using our WhatsApp marketing services, you agree to comply with all applicable laws and regulations. We are not responsible for any misuse of the service.</p>
-  <p>For any concerns, contact: [your email address]</p>
+    <h1>Terms of Service</h1>
+
+    <p>These Terms of Service govern your use of WhatsApp communications from Christian Tyler Properties LLC ("we", "our", or "us"). By interacting with us via WhatsApp, you agree to the following terms:</p>
+
+    <h2>1. Communications</h2>
+    <p>By providing your phone number and engaging with our WhatsApp communications, you consent to receiving updates, marketing information, and other messages related to our services.</p>
+
+    <h2>2. Opt-Out</h2>
+    <p>You may opt out of receiving communications from us at any time by replying "STOP" or contacting us at <strong>info@ctp-fl.com</strong>.</p>
+
+    <h2>3. No Guarantees</h2>
+    <p>Information shared through WhatsApp does not constitute an offer to sell or solicitation to purchase securities or investments. Any participation must follow a formal agreement and offering memorandum.</p>
+
+    <h2>4. Contact Information</h2>
+    <p>For any questions or concerns about these Terms, you can reach us at <strong>info@ctp-fl.com</strong>.</p>
+
+    <p>Effective Date: April 28, 2025</p>
 </body>
 </html>
